--- a/docs/notes/guide/1. 快速开始/1.3 MacOS 安装.md
+++ b/docs/notes/guide/1. 快速开始/1.3 MacOS 安装.md
@@ -4,11 +4,16 @@ createTime: 2025/02/07 15:21:39
 permalink: /guide/MacOSins/
 ---
 
-暂时不提供官方一键安装，部分操作需要手动完成。
+建议换一台 Windows、Linux 的电脑使用，如果你非要用，那么：可以参考[通用安装指南](./1.5%20通用安装指南.md)。
+
+**NapCat 引导操作**会检查操作系统，MacOS 不受支持会直接报错，你需要自行完成 NapCat 引导，以便在启动时跳过它：
+
+- 按照 NapCat 文档[有关部分](https://napneko.github.io/guide/boot/Shell#napcat-macos-macos%E5%AE%89%E8%A3%85%E5%B7%A5%E5%85%B7) 正确安装 NapCat。
+
+- 在 NapCat WebUI 中[配置 websocket 服务](https://napneko.github.io/config/basic#%E9%80%9A%E8%BF%87-webui-%E9%85%8D%E7%BD%AE-onebot-%E6%9C%8D%E5%8A%A1)
+
+- 填写有关[配置项](../2.%20基本开发/4.%20配置项.md)。
+
+然后就和其它系统的启动无异。
 
 遇到困难可[进群](https://qm.qq.com/q/L6XGXYqL86)求助.
-
-## 自行适配提要
-
-[安装方式](../7.%20常见问题/1.%20安装时常见问题.md#各种各样的安装问题通解)
-[使用方式](../1.%20快速开始/1.1%20Linux%20安装.md#执行代码)
