--- a/docs/notes/guide/1. 快速开始/1.4 Windows 一键安装.md
+++ b/docs/notes/guide/1. 快速开始/1.4 Windows 一键安装.md
@@ -4,6 +4,8 @@ createTime: 2025/03/25 14:21:39
 permalink: /guide/onestepi/
 ---
 
+# 本指南暂时废弃
+
 ## 简介
 
 NcatBot 提供一键安装工具, 如果你不熟悉基本的计算机知识, 例如**路径**, **工作目录**等概念, 那么建议使用一键安装工具.
