--- a/docs/notes/guide/1. 快速开始/2. 开发指南.md
+++ b/docs/notes/guide/1. 快速开始/2. 开发指南.md
@@ -7,23 +7,47 @@ permalink: /guide/devguide/
 
 ## NcatBot 的几种开发范式
 
-### 主动模式（原先叫嵌入模式）
+### 前台模式（大多数）
 
-主动模式下，进程的管理权限由你持有。使用 `BotClient.run_blocking()` 方法启动，该方法会返回一个 `BotAPI` 实例，通过该实例可以调用 NcatBot 提供的接口。退出时需要使用 `BotClient.exit()` 方法通知 NcatBot 完成退出操作。再结束进程。
+:::tip
+3.x.y 版本中，该模式称为 "插件模式"
+:::
 
-主动模式下，NcatBot 就是一个普通的第三方模块，你可以按照任何你喜欢的方式布局你的项目。
+前台模式下，你的代码只能通过**回调函数**被调用。（NcatBot 在前台运行）
+
+适合场景：
+- QQ Bot 是项目的核心，程序的生命周期就是 Bot 的生命周期。
+
+讲人话（以下几种情况都是）：
+- 收到消息、加群通知之后做点什么。
+- 定时发送一些消息。
+- 你无法明白前台模式和后台模式的差异。
+
+[参考代码](./1.1%20Linux%20安装.md#执行代码)。
+
+### 后台模式
+
+:::tip
+3.x.y 版本中，该模式称为 "主动模式"/"嵌入模式"
+:::
+
+后台模式启动后，会返回一个 `BotAPI` 示例，通过 API 可以调用有关接口完成对应操作。（NcatBot 在后台运行）
+
+可以注册回调函数以便接收 QQ 端的消息。
+
+适合场景：
+- QQ Bot 只是项目工作流的一个组件，程序的生命周期不应该由 NcatBot 管理。
+
+[参考代码](./1.5%20通用安装指南.md#Hello%20NcatBot)
 
 
-### 插件模式
+## 推荐阅读路线
 
-插件模式下，进程的管理权限由 NcatBot-PluginSystem 持有。使用 `BotClient.run()` 方法启动，调用后进程控制权被转交。启动后可以使用 `Ctrl+C` 正常退出。
+1. [插件最小示例](../2.%20基本开发/1.%20插件模式最小示例.md)。
+---------------------------
 
-插件项目是 NcatBot 的核心, 也是 NcatBot 的主要开发范式. 插件项目有**一定的目录结构要求和命名规范要求**. 与之对应的, 插件项目具有**便利的功能支持**和**丰富的社区生态**, 通过插件项目, 可以开发出功能强大, 分发容易的 QQ 机器人.
 
-### 一些澄清
-
-主动模式和插件模式唯一的区别是**控制权所属**。主动模式下，只要调用了 `BotClient.run_blocking()` 方法，也会加载工作目录下 `plugins/` 中的插件。NcatBot 及其插件被抽象为一个 `BotClient` 实例。
-
+# 还没写好
 ## 从实际项目快速了解
 
 - [主动发送消息](../8.%20实际项目参考/教程项目/主动发送消息.md)
