--- a/docs/notes/guide/1. 快速开始/3. 安装和使用插件.md
+++ b/docs/notes/guide/1. 快速开始/3. 安装和使用插件.md
@@ -4,6 +4,8 @@ createTime: 2025/03/27 11:45:00
 permalink: /guide/inplugin/
 ---
 
+# 还没做好
+
 ### 手动安装插件
 
 将**插件文件夹**放入(运行[引导程序](../5.%20杂项/6.%20术语表.md#引导程序)时的)工作目录下 `plugins` 文件夹下即可.
