--- a/docs/notes/guide/1. 快速开始/1. 快速开始.md
+++ b/docs/notes/guide/1. 快速开始/1. 快速开始.md
@@ -6,25 +6,23 @@ permalink: /guide/dto79lp7/
 
 ## 什么是 NcatBot
 
-NcatBot 是 [NapCat](https://github.com/NapNeko/NapCatQQ) 的 Python SDK (开发者套件), 旨在简化 QQ Bot 的开发和部署流程.
+NcatBot 是 [NapCat](https://github.com/NapNeko/NapCatQQ) 的 Python SDK (开发者套件)， 旨在简化 QQ Bot 的开发和部署流程。
 
-[进一步了解 NcatBot](../5.%20杂项/1.%20认识%20NcatBot.md).
+[进一步了解 NcatBot](../5.%20杂项/1.%20认识%20NcatBot.md)。
 
 ## 核心优势
 
-- **配置简单**: NcatBot 只需要 pip 就能安装, 只需要配置 QQ 号就能运行, 适合快速上手, 快速开发.
+- **配置简单**: NcatBot 只需要 pip 就能安装， 只需要配置 QQ 号就能运行， 适合快速上手， 快速开发。
   
-- **专注业务**: NcatBot 拥有快捷的**一键发布**方案和完善的**一键部署**方案, 您无需关心发布和部署等边缘任务, 只需专注于核心业务的编写.
-
-- **功能丰富**: NcatBot 拥有丰富的内置功能, 如**配置项管理**, **权限系统**, **数据持久化**, 涵盖大部分场景, 免去重复造轮子的烦恼.
+- **功能丰富**: NcatBot 拥有丰富的内置功能， 如**配置项管理**， **权限系统**， **数据持久化**， 涵盖大部分场景， 免去重复造轮子的烦恼。
 
 ## 安装 NcatBot
 
-### 极简指南
+### 通用指南
 
-极简指南，适合了解开源社区机制和 Python 语言的同学快速完成安装。
+通用的**极简**指南，适合了解开源社区机制和 Python 语言的同学快速完成安装。
 
-- [极简安装指南](./1.5%20极简安装指南.md)
+- [通用安装指南](./1.5%20通用安装指南.md)
 
 ### 详细指南
 
@@ -37,8 +35,6 @@ NcatBot 是 [NapCat](https://github.com/NapNeko/NapCatQQ) 的 Python SDK (开发
 - [Linux 安装 NcatBot](./1.1%20Linux%20安装.md)
 
 - [MacOS 安装 NcatBot](./1.3%20MacOS%20安装.md)
-
-- [使用云上 NcatBot 镜像](../5.%20杂项/4.%20轻松上云.md)
 
 ## 使用 NcatBot 开发自己的 Bot
 
