--- a/docs/notes/guide/1. 快速开始/1.2 Windows 安装.md
+++ b/docs/notes/guide/1. 快速开始/1.2 Windows 安装.md
@@ -4,35 +4,31 @@ createTime: 2025/02/07 15:21:39
 permalink: /guide/wininsta/
 ---
 
-运行你的第一个 Bot !
-
 ::: warning
-如果使用**服务器**部署，**强烈不建议**使用 Windows Server，建议使用基于 Ubuntu 操作系统的服务器。
+此教程只适用 Window10、Windows11 操作系统。
 :::
 
 ## 任务列表
 
 我们给出一个简单的任务清单, 你可以按照下面的步骤来安装 NcatBot.
 
-1. 在你的电脑上安装 Python >= 3.10 (推荐 3.12).
+1. 正确安装 Python3.12
 
-2. 通过 pip 安装 NcatBot.
+2. 通过 pip 安装 NcatBot
 
-3. 检查环境是否正常.
+3. 安装最新版 QQ
 
-4. 扫码登录 NcatBot.
+4. 运行代码并扫码登录
 
 ## 1. 安装 Python
 
-如果你还不会安装 Python, 请先在 [菜鸟教程](https://www.runoob.com/python3/python3-tutorial.html) ==认真学习== Python 相关的知识后再使用本项目.
-
-这里给出一个正确的 [Python](https://repo.huaweicloud.com/python/3.12.9/python-3.12.9-amd64.exe) 安装包. 下载后双击安装.
-
-安装时请一定注意, 保证 **Add Python 3.12 to PATH** 处于勾选状态, 其余选项**保持默认**.
-
-![要勾选 Add to PATH](https://raw.githubusercontent.com/huan-yp/image_space/master/img/202503271452016.png)
+[教程](https://zhuanlan.zhihu.com/p/111168324)
 
 ## 2. 安装 NcatBot
+
+::: warning
+不要从 GitHub 上下载 .zip 压缩包；如果下载并解压过，请删掉解压出来的文件。
+:::
 
 项目已经发布到 PYPI, 可以使用 pip 直接下载本项目.
 
@@ -46,162 +42,78 @@ permalink: /guide/wininsta/
 ```shell
 pip install ncatbot -U -i https://mirrors.aliyun.com/pypi/simple
 ```
-
-@tab Gitee(过时, 不推荐)
-
-```shell
-pip install git+https://gitee.com/li-yihao0328/nc_bot.git
-```
-
-@tab GitHub(开发预览版, 不推荐)
-
-```shell
-pip install git+https://github.com/liyihao1110/ncatbot.git
-```
-
 :::
 
-如果你下载过 github 上的 .zip 压缩文件并解压出来过, 请**删掉它们**.
+## 3. 安装最新版 QQ（可选）
 
-如果出现**红色**的错误信息, 例如:
+卸载掉电脑上已经安装的 QQ。
 
-```
-pip : 无法将“pip”项识别为 cmdlet、函数、脚本文件或可运行程序的名称。请检查名称的拼写，如果包括路径，请确保路径
-正确，然后再试一次。
-```
+前往 [QQ 官网](im.qq.com) 下载安装最新版 QQ。
 
-说明**没能成功安装 Python**, 一般是因为**第一个页面没能勾选 Add Python 3.xx to PATH**, 或者是因为**第二个页面取消了 pip 的勾选**.
-
-如果中途没有出现**红色**的错误信息, 并且最后出现:
-
-```
-Successfully installed Markdown-3.7 Pillow-11.1.0 Pygments-2.19.1 anyio-4.9.0 appdirs-1.4.4 certifi-2025.1.31 charset-normalizer-3.4.1 colorama-0.4.6 gitdb-4.0.12 gitpython-3.1.44 h11-0.14.0 httpcore-1.0.7 httpx-0.28.1 idna-3.10 importlib-metadata-8.6.1 ncatbot-3.5.9 packaging-24.0 psutil-6.1.1 pyee-11.1.1 pyppeteer-2.0.0 pyyaml-6.0.2 qrcode-8.0 qrcode-terminal-0.8 requests-2.32.3 schedule-1.2.2 smmap-5.0.2 sniffio-1.3.1 tqdm-4.67.1 typing-extensions-4.12.2 urllib3-1.26.20 websockets-10.4 zipp-3.21.0
-```
-
-则说明安装成功.
-
-## 3. 检查运行环境
-
-### 检查 NcatBot 是否安装成功
-
-在**终端**中, 输入 `python` 并回车, ==打开 Python 交互模式==.
-
-复制以下代码, 粘贴进去, 回车执行.
-
-::: code-tabs
-@tab python
-
-```python
-import ncatbot
-print(ncatbot.__version__)
-```
-
-:::
-
-如果输出了版本号, 例如 `3.7.10r1`（2025.4.28）则说明安装成功。
-
-### 检查 QQ 版本
-
-NcatBot 需要 QQ 版本至少达到 `9.9.18` 才能正常运行, 如果你不知道你的 QQ 是哪个版本, 请前往[官网](https://im.qq.com)或者[点击这里的官方下载链接](https://dldir1.qq.com/qqfile/qq/QQNT/Windows/QQ_9.9.18_250318_x64_01.exe) 下载最新版 QQ 的安装包. 双击安装包更新即可.
-
+## 4. NcatBot 启动
 
 ### 准备 QQ 号
 
 为了测试, 需要两个 QQ 号：
 
-- 一个 QQ 号称为 **Bot**, Bot 一般是小号, 它**由 NcatBot 控制**.
-- 另一个 QQ 号称为 **root**, root 一般是大号, 由你自己控制, 拥有管理 Bot 的权限.
+- **Bot**: 由 NcatBot 控制, 可以使用接口收发消息.
+- **root**: 由你控制, 用于测试 Bot 的功能.
 
-### 确保没有重复登录
+NcatBot 相当于一个电脑 QQ 客户端，因此在登陆前，==你需要退出 Bot 在其它电脑客户端上的登录。==
 
-**Bot** 必须处于**电脑不在线状态**, 检查自己的电脑, 如果电脑上登录了 **Bot**, 请**退出登录**. 
+### 建立工作目录
 
-## 4. NcatBot 启动
-
-建立一个==新的工作目录==(文件夹), 比如建一个 `ncatbot` 文件夹, 进行如下操作:
+建立一个==新的工作目录==(文件夹)，文件夹名为 `ncatbot`。
 
 1. 双击进入 `ncatbot` 文件夹.
 
-2. 执行主函数:
-   
-   ::: details 方法一
-      1. 在==文件夹中打开终端==(右键这个文件夹的空白区域, 选择 "在终端中打开"), 输入 `python` 并回车打开 ==Python 交互终端==.
+2. 文件夹新建一个 `main.py` 文件，注意[后缀名](https://zhuanlan.zhihu.com/p/112226609) 是 `.py`
 
-      2. 复制执行下面的代码(==记得把代码中的 `bt_uin` 改成 **Bot** QQ 号, 把 `root` 改成 **root** QQ 号==)并回车执行. 
-   :::
-
-   ::: details 方法二
-      1. 在文件夹中创建一个新文件, 名为 `main.py`, 注意文件的[后缀名](https://zhuanlan.zhihu.com/p/112226609)是 `.py`.
-   
-      2. 用**记事本等文本编辑器**打开 `main.py` 文件, 复制下面的代码, 粘贴进去, 并==记得把代码中的 `bt_uin` 改成 **Bot** QQ 号, 把 `root` 改成 **root** QQ 号==
-   
-      3. Ctrl+S **保存**.
-       
-      4. 在==文件夹中打开终端==(右键这个文件夹的空白区域, 选择 "在终端中打开"), 输入 `python main.py` 并回车执行.
-   :::
-
-
-3. 如果是第一次执行, 可能会弹出一个窗口询问是否允许修改, ==选择是==. 等待一段时间后, 会显示二维码. 扫码时, 需要在**手机上先登录 Bot QQ 号**, 用手机扫码登录.
-
-4. 用 **root** QQ 号向你的 **Bot** QQ 号 ==私聊==发送一句 `测试`, 收到 `NcatBot 测试成功喵~` 的消息, 说明 NcatBot 已经成功运行起来了!
-
-5. 请注意, ==请不要关闭打开的两个终端窗口(黑框框)==, 否则 NcatBot 将无法正常运行.
-
+3. 用记事本或者其它文本编辑器打开 `main.py` 文件，复制以下代码进去，并**保存**。
 
 ::: code-tabs
-@tab python
-
+@tab Python
 ```python
 # ========= 导入必要模块 ==========
-from ncatbot.core import BotClient, GroupMessage, PrivateMessage
-from ncatbot.utils import get_log
+from ncatbot.core import BotClient, PrivateMessage
 
 # ========== 创建 BotClient ==========
 bot = BotClient()
-_log = get_log()
 
 # ========= 注册回调函数 ==========
-@bot.group_event()
-async def on_group_message(msg: GroupMessage):
-    _log.info(msg)
-    if msg.raw_message == "测试":
-        await msg.reply(text="NcatBot 测试成功喵~")
-
 @bot.private_event()
 async def on_private_message(msg: PrivateMessage):
-    _log.info(msg)
     if msg.raw_message == "测试":
         await bot.api.post_private_msg(msg.user_id, text="NcatBot 测试成功喵~")
 
 # ========== 启动 BotClient==========
-if __name__ == "__main__":
-    bot.run(bt_uin="123456") # 这里写 Bot 的 QQ 号
+bot.run()
 ```
-
 :::
 
+4. 右键文件夹（就像你新建那个文件一样），选择 "在终端中打开"。在跳出的窗口（即终端，通常为黑底白字）输入 `python main.py` 执行代码。
+
+:::details 没有**在终端中打开**
+
+部分 Windows10 操作系统确实没有这个选项。
+
+打开你的 ncatbot 文件夹。看到窗口最上方那条地址栏了吗？（写着“此电脑 > 桌面 > ncatbot”之类）
+
+用鼠标在这条地址栏里点一下，整条路径就会变成蓝底白字。直接按 Ctrl + C 就复制好了。
+
+打开 PowerShell（Win+R → 输入 powershell → 回车），输入 cd "Ctrl+V 粘贴刚才复制的路径"，回车，路径就切进去了。
+:::
+
+5. 在手机上登录 Bot。电脑上按照提示输入 Bot QQ 号，然后手机扫码登录。
+
+6. 接着使用 root 向 Bot 发送一条消息 "测试"，收到回复即正常运行。
 
 ## 5. 常见问题
 
-### 无法识别到Napcat的存在（Windows）
+### 有一步做不下去怎么办？
 
-请检查你的**Napcat**文件夹是否在你的项目文件夹里，如果存在请检查你是否使用了**Napcat**一键安装脚本.
-如果是通过一键脚本安装的请删除相关文件并手动安装**Napcat.Shell**版本.
+- 将本教程全数复制下来，发给 AI（kimi 等），并将你的疑惑告诉它，它会教你。
 
-### 连接 WebSocket 服务器超时
+### 好像由红色的报错？ 
 
-正常来说, 运行时会弹出**是否允许 XXX 修改计算机**, 你需要**手动允许后**弹出第二个终端(黑框框).
-
-如果没有弹出**是否允许 XXX 修改计算机**, 那么可能是 Windows 安全系统阻止了 NapCat 服务的运行.
-
-请按照[这里](https://blog.csdn.net/weixin_42083266/article/details/118304854)的步骤操作.
-
-**Windows 安全中心** 可以直接在下方**任务栏**的**搜索框**中输入 `Windows 安全中心` 找到并打开.
-
-### 二维码是乱码
-
-喵喵喵.
-
-### 更多
-
-请查阅 [FAQ](../7.%20常见问题/1.%20安装时常见问题.md) 以了解更多常见问题.
+- 将出现**红色错误提示**的页面，**尽可能全的截取下来**，交给 Kimi 等 AI 助手并请求它们的帮助。
