生命周期图

--- a/docs/notes/guide/2. 基本开发/1. 插件最小示例.md
+++ b/docs/notes/guide/2. 基本开发/1. 插件最小示例.md
@@ -40,11 +40,9 @@ class HelloPlugin(NcatBotPlugin):
         await event.reply("你发送了一条私聊消息！")
 ```
 
-### 插件元数据
+### 插件类
 
-- `name`：插件名，插件唯一标识符，**必须全局唯一**。
-- `version`：插件版本，一般采用 `x.y.z` 方式。
-- `author`：可选，插件作者名。
+插件类可以利用 NcatBot 插件系统的强大功能，来定义一组功能的集合。一个插件作为一个整体能够非常灵活的迁移，[参见]()。
 
 ### command_registry
 
@@ -76,6 +74,10 @@ from ncatbot.core import BotClient
 bot = BotClient()
 bot.run_frontend()
 ```
+
+### BotClient
+
+用于启动和终止 Bot，安装、配置、连接 NapCat；引导[插件系统]()的加载；提供回调函数注册接口，[参见]()。
 
 ## 运行
 
