--- a/docs/notes/guide/2. 基本开发/2. 前后台模式最小示例.md
+++ b/docs/notes/guide/2. 基本开发/2. 前后台模式最小示例.md
@@ -18,12 +18,14 @@ bot = BotClient()
 async def on_private_message(event: PrivateMessageEvent):
     print("收到私聊消息")
 
-api = bot.run_frontend()
+bot.run_frontend()
 ```
 
 ### 运行
 
 终端执行 `python main.py` 直接运行，收到私聊消息会在终端打印 `收到私聊消息`。
+
+程序会**永远阻塞**在 `bot.run_frontend()`，除非按下 `Ctrl+C` 或者以其它方式终止，否则程序不会停止。
 
 ## 后台模式
 
@@ -31,11 +33,12 @@ api = bot.run_frontend()
 
 ```python
 from ncatbot.core import BotClient
+from ncatbot.core.event import PrivateMessageEvent
 
 bot = BotClient()
 
 @bot.on_private_message()
-async def on_private_message(event: BaseMessageEvent):
+async def on_private_message(event: PrivateMessageEvent):
     print("收到私聊消息")
 
 api = bot.run_backend()
@@ -45,4 +48,34 @@ print("后台已运行，继续做其他同步任务……")
 bot.exit() # 需要主动退出 Bot
 ```
 
-## 组件介绍
+### 运行
+
+终端执行 `python main.py` 直接运行。
+
+Bot **完成启动后**，会**返回** [BotAPI]() 实例。这个实例用于**调用各种接口**，如获取好友列表、群成员列表、收发消息、审核加群请求等。
+
+:::details 剩余部分的讲解
+`bot.run_backend()` **返回**后，程序将会继续执行：
+
+- 在这个示例中，程序接下来调用了 `api.send_private_text_sync` 向 QQ 用户 876543 发送了一条消息。
+
+- 接着打印了 `后台已运行，继续做其他同步任务……` 到终端。
+
+- 最后调用有关接口**退出**了 Bot。
+:::
+
+## 组件
+
+### BotAPI
+
+这个实例用于**调用各种接口**，如获取好友列表、群成员列表、收发消息、审核加群请求等，[参见]()
+
+### BotClient
+
+用于启动和终止 Bot，安装、配置、连接 NapCat；引导[插件系统]()的加载；提供回调函数注册接口，[参见]()。
+
+### ncatbot.core.event
+
+包括 `PrivateMessageEvent`、`GroupMessageEvent`、`BaseMessageEvent` 等。
+
+事件数据结构，用于描述收到的消息、加群请求等，[参见]()。
