--- a/docs/notes/guide/6. 开发 NcatBot 插件/1. 了解 NcatBot 插件.md
+++ b/docs/notes/guide/6. 开发 NcatBot 插件/1. 了解 NcatBot 插件.md
@@ -4,7 +4,15 @@ createTime: 2025/02/08 10:07:54
 permalink: /guide/dplugins/
 ---
 
+### 插件元数据
+
+- `name`：插件名，插件唯一标识符，**必须全局唯一**。
+- `version`：插件版本，一般采用 `x.y.z` 方式。
+- `author`：可选，插件作者名。
+
 ## NcatBot 插件
+
+
 
 在了解 NcatBot 插件之前, 请至少先阅读[开发指南](../1.%20快速开始/2.%20开发指南.md).
 
