--- a/docs/notes/guide/2. 基本开发/3. NcatBot 生命周期.md
+++ b/docs/notes/guide/2. 基本开发/3. NcatBot 生命周期.md
@@ -3,70 +3,37 @@ title: NcatBot 生命周期
 createTime: 2025/02/08 10:07:54
 permalink: /guide/lifespan/
 ---
-# NcatBot 生命周期概览
 
-> 本文概述 Bot 从“创建实例”到“优雅退出”的核心阶段，聚焦：配置→启动→插件加载→事件分发→运行期并发→关闭。示例基于 `BotClient` 与插件系统源码（2025-09）。
 
-## 1. 生命周期阶段
-1. 初始化 (Instantiation)
-2. 启动前配置 (Config Injection)
-3. 启动流程 (Start / Frontend & Backend)
-4. 插件装载与依赖解析 (Plugin Loading)
-5. 事件接入与派发 (Event Dispatch)
-6. 运行期并发与超时控制 (Runtime & Concurrency)
-7. 关闭与资源回收 (Shutdown)
+## 生命周期阶段
 
-## 2. 关键对象
+1. 初始化
+2. 启动流程
+3. 插件装载
+4. 运行
+5. 关闭
+
+## 关键组件
+
 - `BotClient`: 生命周期协调者；注册官方事件回调 → 启动 NapCat 服务 → 建立 WS → 适配器事件转投 `event_bus`。
-- `PluginLoader`: 目录扫描 → 依赖拓扑排序 → 并发执行插件 `__onload__()`（含同步 `_init_` + 异步 `on_load`）。
-- `BasePlugin`: 定义插件三组钩子：同步 `_init_/_reinit_/_close_` 与异步 `on_load/on_reload/on_close`；配置持久化于 `<data_dir>/<name>.yaml`。
-- `EventBus`: 线程化事件总线；支持精确 / 正则订阅、优先级、超时替换线程、强制终止超时处理器。
-- `Adapter + BotAPI`: 对外消息与内部事件桥梁。
+- `PluginLoader`: 加载、扫描目录并识别和加载插件。
+- `NcatBotPlugin`: 插件基类，提供插件和插件系统交互所需的基本方法。
+- `EventBus`: 线程化事件总线，向插件系统分发事件。
+- `Adapter`: 接收 QQ 事件和消息。
+- `BotAPI`: 调用 QQ 接口。
 
-## 3. 启动流程概述
-见顺序图 `lifecycle_diagrams.md` 中 `sequence`：
-1. 用户 `bot = BotClient()`：构造适配器、线程池、官方事件 handler 容器。
-2. `bot.run_frontend()` / `run_backend()` → 调用 `start()`。
-3. 合法化配置参数（写入 `ncatbot_config` → `validate_config()`）。
-4. 构造 `EventBus`、`PluginLoader` → 调用 `load_plugins()`：
-   - 加载内置插件（如 `SystemManager`）。
-   - 扫描插件目录 → 收集类 → 依赖解析（拓扑排序）。
-   - 为每个插件创建工作线程池上下文并并发执行 `__onload__()`。
-5. 非 mock 模式：启动 NapCat 外部服务 → 建立 WebSocket → 注册回调。
-6. 适配器接收原始事件 → 映射为官方事件常量 → 投递到 `event_bus.publish()`。
+## 插件生命周期与持久化
 
-## 4. 事件派发与执行
-- `BotClient` 为每个官方事件维护处理器列表；接收后将 handler 以异步形式投递线程池（防阻塞）。
-- 插件层：`plugin.register_handler(type, fn, priority, timeout)` → `EventBus.subscribe()` 存入精确或正则表。
-- 发布：`publish(NcatBotEvent)` 收集匹配处理器 → 逐个提交任务队列。
-- 每个处理任务：独立工作线程执行（同步或包装协程）。结果 / 异常存入对应队列，汇总至事件对象。
-
-## 5. 并发与超时策略
-- 工作线程集合 + 监控线程周期扫描 `worker_timeouts`。
-- 若处理超时：调用 `PyThreadState_SetAsyncExc` 强制注入 `TimeoutError`，移除旧线程并补齐新线程，事件聚合 `HandlerTimeoutError`。
-- 优先级排序：先按 `priority` 降序，再按处理函数名字典序；正则与精确结果合并统一排序。
-
-## 6. 插件生命周期钩子与持久化
 - 载入：若存在数据文件则反序列化 YAML → `_init_()` → `on_load()`。
-- 卸载：`unregister_all_handler()` → `_close_()` → `on_close()` → 序列化当前 `config`。
-- 重载：调用旧实例 `_reinit_()` + `on_reload()` → 卸载旧 → 动态 reload 模块 → 重新 `load_plugin()`。
+- 卸载：`unregister_all_handler()` → `_close_()` → `on_close()` → 序列化当前 `config` 并保存。
+- 重载：调用旧实例 `_reinit_()` + `on_reload()` → 卸载旧 → 动态 reload 模块 → 重新 `load_plugin()`。（此功能不稳定）
 
-## 7. 关闭流程
-- 触发方式：`KeyboardInterrupt` 或连接异常 → 调用 `bot_exit()`。
-- 步骤：设置 `status.exit` → `plugin_loader.unload_all()` → 插件写回配置 → 日志记录。“后端”模式下还会释放启动锁以通知调用方。
+## 关闭流程
 
-## 8. 状态 & 全局注入
-- `status.global_api` 在 `BotClient.__init__` 中设定，用于插件访问统一 `BotAPI`。
-- `status.global_access_manager` 在 `PluginLoader` 初始化时绑定 RBAC 管理器。
+- 触发方式：前台模式 `Ctrl+C` 触发 `KeyboardInterrupt`；或后台模式调用 `bot_exit()`。
+- 步骤：设置 `status.exit` → `plugin_loader.unload_all()` → 插件写回配置 → 日志记录。
 
-## 9. 典型扩展点
-- 增加新官方事件：`EVENTS` 新常量 + `create_official_event_handler_group()` 建立容器。
-- 增强线程策略：替换当前“超时=杀线程”方案为协程执行 (需要改执行模型)。
-- 插件隔离：为插件提供独立事件循环 + 限流器。
-
-> 图示与顺序 / 状态图请见 `lifecycle_diagrams.md`。
-
-## 简介
+## Mermaid 流程图
 
 ```mermaid
 sequenceDiagram
@@ -86,15 +53,13 @@ sequenceDiagram
     B->>L: load_plugins
     L->>L: load_builtin_plugins
     L->>L: 找到插件文件夹，读取并加载插件
-
+    B->>A: launch_napcat_service && connect_websocket
     %% 区分 frontend / backend 两种模式
     alt frontend 模式
-        B->>A: launch_napcat_service && connect_websocket
         A-->>B: on_event(callback)
         B->>EB: publish(NcatBotEvent)
         B->>U: 同步调用自定义回调函数
     else backend 模式
-        B->>A: launch_napcat_service && connect_websocket
         A-->>B: 连接成功
         %% 关键改动：立即返回，用户代码继续往下执行
         B-->>U: 立即返回控制权（用户代码继续）
@@ -112,76 +77,100 @@ sequenceDiagram
     end
 ```
 
-NcatBot 的生命周期按照时间顺序分为以下几步:
+## 1. 初始化
 
-- 引导
-- 
-
-## 引导
+调用 `BotClient.run_xxxend()` 之前的流程称为初始化。
 
 1. 导入必要的模块
-2. 设置配置项(可选)
-3. 创建 BotClient 实例
-   1. 检查配置项是否合法, 检查是否已经创建过 BotClient 实例.
-   2. 初始化 BotAPI.
-   3. 初始化事件总线和内置功能.
-   4. 加载功能注册钩子.
-   5. 加载权限数据.
-4. 注册回调函数(可选)
-5. 启动 BotClient 实例
+2. 创建 BotClient 实例
+3. 修改[配置项]() (可选)
+4. 注册回调函数 (可选)
 
-以上过程称为**引导**，用于**引导**的代码称作**引导程序**。
 
-[插件模式引导](./1.%20插件模式最小示例.md#运行)
+## 2. 启动流程
 
-[主动模式引导](./2.%20主动模式最小示例.md#运行)
+启动流程发生在调用 `BotClient.run_xxxend()` 后。
 
-## 环境检查
+### 2.1. 验证配置项
 
-环境检查发生在调用 `BotClient.run()` 或者 `BotClient.run_blocking()` 时，包含以下步骤：
+1. 如果是公网监听模式，检查 ws_token 强度，过弱的 ws_token 会被强制修改。
+2. 如果启用了 WebUI，检查 webui_token 强度，过弱的 webui_token 会被强制修改。
+3. 不支持 https/wss，会被强制修改为 http/ws。
+4. 如果没有设置 bt_uin，会要求用户输入；如果没有设置 root，会 warning 提醒。
+5. 如果以 `mock_mode` 启动，则执行 `Adapter` 级别的 Mock 注入，然后直接进入 [3. 加载插件](#3-加载插件)。
 
-1. **检查 NcatBot 安装**：检查 NcatBot 是否通过 pip 安装。如果开启了 NcatBot 更新检查，则额外检查 NcatBot 是否有新版本可用，如果有新版本则提醒用户更新。
-2. **检查 NapCat 服务**： 检查 `ws_uri` 中指定的 NapCat 服务是否能被连接并且可用, 如果可用则跳过**环境检查**、 **NapCat 启动**、**引导登录**，进入**确认登录**。
-3. **检查 NapCat 安装**：NapCat 是否被正确安装。
-4. **安装或更新 NapCat**：如果 NapCat 未安装，则安装 NapCat。如果开启了 NapCat 更新检查且 NapCat 有新版本可用, 则在用户确认后更新 NapCat。
-5. **配置 NapCat**： 自动配置 NapCat 的各项内容, 以便 NcatBot 能正常连接 NapCat 服务. ==如果你自行改动了 NapCat 配置, NcatBot 会直接覆盖掉你的修改==.
+### 2.2 实际加载插件
 
-## 连接 NapCat 服务
+插件加载操作实际上在这里执行。
 
-1. **启动 NapCat 服务**：Linux 通过命令行启动无感启动 NapCat。Windows 下会询问是否允许 NapCat 对计算机进行修改, 需要同意后才能启动。
-2. **引导登录**：如果之前本地有登录记录，则会使用快速登录。否则需要扫描终端的二维码登录。
-3. **确认登录**：通过 NapCat WebUI 接口确认登录结果，如果登录信息不一致，则终止运行并提醒。
-4. **连接 NapCat 服务**：使用 WebSocket 协议连接到 NapCat 服务。
+### 2.3 安装或更新 NapCat (可选)
 
-## 加载插件
+1. 尝试连接到 ws_uri 指定的 NapCat WebSocket 服务。如果成功，直接进入 2.5.1，否则下一步。
+2. 检查操作系统，如果不是 Windows/Linux，直接报错。
+3. 检查 NapCat 是否被安装/是否有可用更新；用户输入 `y` 确认安装/更新操作。
+4. 安装对应的 NapCat 版本。
 
-1. 查找工作目录下的 `plugins` 目录, 读取插件 meta 信息.
-2. 根据插件 meta 中的依赖信息构建加载拓扑图.
-3. 加载每个插件
+### 2.4 配置和启动 NapCat
+
+1. 读取原有的 NapCat OneBot 配置文件（如果存在），检查当前配置和原有配置文件的兼容性：
+    1. 如果不兼容则进行提示，按照用户选择，停止运行或者进行覆盖。
+    2. 如果兼容，则正确合并配置。
+2. 启动 NapCat 服务。
+
+### 2.5 登录 NapCat（如果启用了 enable_webui_interaction）
+
+1. 尝试连接到 NapCat WebUI，获取所需的登录信息。
+2. 检查登录状态
+    1. 如果未登录，要求用户扫码登录。
+    2. 如果已登录，但登录信息有错，提示用户重启设备以刷新缓存。
+    3. 如果已登录且登录信息正确，继续下一步。
+
+### 2.6 建立 WebSocket 连接
+
+1. 连接到 NapCat WebSocket 服务。
+
+## 3. 加载插件
+
+加载插件发生在启动流程后。
+
+:::tip
+实际代码实现中，launch_napcat_service 和 connect_websocket 发生在插件加载之后。由于这些过程的顺序不影响最终结果，因此将 launch_napcat_service 和 connect_websocket 归类到启动流程中。
+:::
+
+1. 调用 `PluginLoader.load_builtin_plugins` 加载**[内置插件]()**。
+2. 查找工作目录下的 `plugins` 目录, 读取插件 meta 信息.
+3. 根据插件 meta 中的依赖信息构建加载拓扑图.
+4. 加载每个插件
    1. 加载插件私有可持久化数据(包括配置项).
    2. 调用插件 `BasePlugin.on_load` 函数, 执行自定义初始化操作.
    3. 事件总线注册**插件功能**和**插件配置项**.
 
-## 运行
+## 4. 运行
 
-1. 监听来在 NapCat 的事件并上报. 事件对应的回调函数被调用, 同时事件上报到事件总线.
-2. 处理事件
-   - 通过 `BotClient` 注册的回调函数对事件做第一次处理。
-   - 事件进入事件总线，激活**功能函数**做第二次处理, 调用订阅了该事件的所有**回调函数**做第三次处理。
-3. 事件被拦截或者被处理
-   - 订阅事件的回调函数可以拦截该事件, 阻止其继续传播.
-   - 订阅事件的回调函数可以添加事件的处理结果, 以便和其它部分通信.
+1. `Adapter` 接收事件，调用 `BotClient` 传递的事件钩子。
+2. `BotClient` 的事件钩子执行以下操作：
+   1. 将事件转换为 `NcatBotEvent` 标准对象。
+   2. 将事件发布到插件系统的事件总线 `EventBus`。
+   3. 同步/异步调用用户直接注册的回调函数。
+3. 事件总线的行为
+    1. 将事件按照优先级顺序，分发给所有订阅了该事件的处理函数。
+    2. 如果事件被处理器拦截，则不再向后传递。
+    3. 收集事件的处理结果，返回给事件发布者。
+4. 内置插件的行为
+    1. `UnifiedRegistry` 订阅了所有消息事件，将这些事件正确分发到使用 `command_registry` 或 `filter_registry` 注册的处理函数。
+    2. `UnifiedRegistry` 订阅了通知事件、请求事件，将这些事件正确分发到使用 `command_registry` 或 `filter_registry` 注册的处理函数。
+    3. `SystemManager` 在 `UnifiedRegistry` 里注册了一些处理函数，用于获取一些系统信息。
+    <!-- 4. `GroupWhitelist` 以最高优先级订阅了所有消息事件 -->
 
-## 退出
+## 5. 退出
 
 :::warning
 点 X 关闭属于异常退出, 不会触发退出流程。
 :::
 
-插件模式按下 `Ctrl+C` 正常退出，或者主动模式调用对应 `BotClient` 实例的 `exit` 方法, 进入退出流程。
-
-1. 保存权限数据.
-2. 调用 `BasePlugin._unload_` 函数, 完成自定义卸载操作.
-3. 保存插件私有可持久化数据(包括配置项).
-4. 关闭 NapCat 服务(可选, 默认不关闭).
+前台模式按下 `Ctrl+C` 正常退出，或者后台模式调用对应 `BotClient` 实例的 `exit` 方法, 进入退出流程：
+1. 保存权限数据。
+2. 调用 `BasePlugin._unload_` 函数，完成自定义卸载操作。
+3. 保存插件配置项。
+4. 关闭 NapCat 服务 (可选，默认不关闭)。
 
