--- a/docs/notes/guide/2. 基本开发/4. 配置项.md
+++ b/docs/notes/guide/2. 基本开发/4. 配置项.md
@@ -4,154 +4,222 @@ createTime: 2025/02/08 13:16:05
 permalink: /guide/kfcvme50/
 ---
 
-本文介绍 NcatBot 的各个配置项和配置项的指定方式.
+本文介绍 NcatBot 的各个配置项和配置项的指定方式。
 
-NcatBot 的配置项通过位于 `ncatbot.utils.config` 中的全局变量 `config` 来保存和指定. 同时也提供了在运行时指定的快速方法.
+## 访问配置项
+
+可以从 `ncatbot.utils` 中导入配置项：
+
+```python
+from ncatbot.utils import ncatbot_config
+
+print(ncatbot_config.bt_uin) # 123456
+print(ncatbot.napcat.ws_uri) # ws://localhost:3001
+print(ncatbot.plugin.plugins_dir) # plugins
+```
 
 ## 配置项列表
 
-以下给出了所有的配置项及其默认值:
+### 根配置项
 
-```python
-class SetConfig:
+通过 `ncatbot_config.<config_name>` 访问。
 
-    default_root = "123456"
-    default_bt_uin = "123456"
-    default_ws_uri = "ws://localhost:3001"
-    default_webui_uri = "http://localhost:6099"
-    default_webui_token = "napcat"
+| 配置项                       | 类型   | 默认值     | 说明                                                |
+| ---------------------------- | ------ | ---------- | --------------------------------------------------- |
+| `bt_uin`                     | `str`  | `"123456"` | 机器人 QQ 号                                        |
+| `root`                       | `str`  | `"123456"` | 根用户 QQ 号，用于权限管理                          |
+| `enable_webui_interaction`   | `bool` | `True`     | 是否启用 WebUI 交互                                 |
+| `debug`                      | `bool` | `False`    | 是否启用调试模式，调试模式会打印部分异常的堆栈信息  |
+| `github_proxy`               | `str`  | `None`     | GitHub 代理 URL，可通过环境变量 `GITHUB_PROXY` 设置 |
+| `check_ncatbot_update`       | `bool` | `True`     | 是否检查 NcatBot 更新                               |
+| `skip_ncatbot_install_check` | `bool` | `False`    | 是否跳过 NcatBot 安装检查                           |
 
-    def __init__(self):
-        # 内部状态
-        # 可设置状态
-        self.root = self.default_root  # root 账号
-        self.bt_uin = self.default_bt_uin  # bot 账号
-        self.ws_uri = self.default_ws_uri  # ws 地址, 可自定义端口, 默认 3001
-        self.webui_uri = self.default_webui_uri  # webui 地址, 可自定义端口, 默认 6099
-        self.webui_token = self.default_webui_token  # webui 令牌, 默认 napcat
-        self.ws_token = ""  # ws_uri 令牌, 默认留空
-        self.ws_listen_ip = "localhost"  # ws 监听 ip, 默认只监听本机
-        self.remote_mode = False  # 是否远程模式, 即 NapCat 服务不在本机运行
+### NapCat 配置项
 
-        """
-        如果纯远程模式, 则 NcatBot 不对 NapCat 的行为做任何管理.
-        只使用 ws_uri 和 webui_uri 和 NapCat 进行交互, 不会配置启动 NapCat
-        """
+通过 `ncatbot_config.napcat.<config_name>` 访问。
 
-        # 更新检查
-        self.check_napcat_update = False  # 是否检查 napcat 更新
-        self.check_ncatbot_update = True  # 是否检查 ncatbot 更新
+| 配置项                          | 类型   | 默认值                    | 说明                     |
+| ------------------------------- | ------ | ------------------------- | ------------------------ |
+| `ws_uri`                        | `str`  | `"ws://localhost:3001"`   | WebSocket URI 地址       |
+| `ws_token`                      | `str`  | `"NcatBot"`               | WebSocket 令牌           |
+| `ws_listen_ip`                  | `str`  | `"localhost"`             | WebSocket 监听 IP        |
+| `webui_uri`                     | `str`  | `"http://localhost:6099"` | WebUI URI 地址           |
+| `webui_token`                   | `str`  | `"NcatBot"`               | WebUI 令牌               |
+| `enable_webui`                  | `bool` | `True`                    | 是否启用 WebUI           |
+| `check_napcat_update`           | `bool` | `False`                   | 是否检查 NapCat 更新     |
+| `stop_napcat`                   | `bool` | `False`                   | 退出时是否停止 NapCat    |
+| `remote_mode`                   | `bool` | `False`                   | 是否启用远程模式         |
+| `report_self_message`           | `bool` | `False`                   | 是否报告自身消息         |
+| `report_forward_message_detail` | `bool` | `True`                    | 是否上报解析合并转发消息 |
 
-        # 开发者调试
-        self.debug = False  # 是否开启调试模式
-        self.skip_ncatbot_install_check = False  # 是否跳过 napcat 安装检查
-        self.skip_plugin_load = False  # 是否跳过插件加载
+#### 自动检测配置项
 
-        # NapCat 行为
-        self.stop_napcat = False  # NcatBot 下线时是否停止 NapCat
-        self.enable_webui_interaction = True  # 是否允许 NcatBot 与 NapCat webui 交互
+这些配置项会根据其他配置自动生成，不需要手动设置：
 
-        """
-        如果 enable_webui_interaction 为 False, 则 NcatBot 不会与 NapCat webui 交互
-        账号检查, 引导登录等行为均不会发生, 只使用 ws_uri 与 NapCat 交互
-        """
+| 配置项       | 类型  | 说明                                 |
+| ------------ | ----- | ------------------------------------ |
+| `ws_host`    | `str` | WebSocket 主机，从 `ws_uri` 自动检测 |
+| `ws_port`    | `int` | WebSocket 端口，从 `ws_uri` 自动检测 |
+| `webui_host` | `str` | WebUI 主机，从 `webui_uri` 自动检测  |
+| `webui_port` | `int` | WebUI 端口，从 `webui_uri` 自动检测  |
+
+### Plugin 配置项
+
+通过 `ncatbot_config.plugin.<config_name>` 访问。
+
+| 配置项             | 类型        | 默认值      | 说明             |
+| ------------------ | ----------- | ----------- | ---------------- |
+| `plugins_dir`      | `str`       | `"plugins"` | 插件目录         |
+| `plugin_whitelist` | `List[str]` | `[]`        | 插件白名单       |
+| `plugin_blacklist` | `List[str]` | `[]`        | 插件黑名单       |
+| `skip_plugin_load` | `bool`      | `False`     | 是否跳过插件加载 |
+
+## 从文件设置配置项（推荐）
+
+NcatBot 使用 YAML 格式的配置文件。默认配置文件路径为**当前工作目录下**的 `config.yaml`，可以通过环境变量 `NCATBOT_CONFIG_PATH` 自定义。
+
+### 配置文件结构
+
+```yaml
+root: '123456' # Bot 管理员 QQ 号
+bt_uin: '123456' # Bot QQ 号
+enable_webui_interaction: true # 启用 webui 交互
+check_ncatbot_update: true # 检查 NcatBot 更新
+skip_ncatbot_install_check: false # 跳过 NcatBot 安装检查
+debug: false # 调试模式, 开启将会打印更多调试信息
+napcat:
+  ws_uri: ws://localhost:3001
+  webui_uri: http://localhost:6099
+  webui_token: NcatBot
+  ws_token: 'NcatBot'
+  ws_listen_ip: localhost
+  enable_webui: true
+  remote_mode: false
+  check_napcat_update: false
+  stop_napcat: false
+  report_self_message: false
+  report_forward_message_detail: true # 上报解析合并转发消息
+plugin:
+  plugin_whitelist: [] # 插件白名单, 留空表示不启用白名单, 只加载白名单内的插件
+  plugin_blacklist: [] # 插件黑名单, 留空表示不启用黑名单, 不加载黑名单内的插件
+  # 同时启用白名单和黑名单时, 白名单优先级更高(即只有白名单内的插件会被加载, 黑名单无效)
+  plugins_dir: plugins
+  skip_plugin_load: false
+
 ```
 
-- `bot_uin`: 就是 **Bot** QQ 号. 这个千万不能填错了喵~
-- `root`: **root** QQ 号, 具有超管权限, 一般填你的 QQ 大号.
+## 使用特定接口设置配置项
 
-一般来说除了 `root` 和 `bt_uin` 需要指定外, 其它配置项推荐使用默认值，如果有端口冲突也许需要自行替换。
+NcatBot 提供了一些特定的方法来动态修改配置项，优先级高于从默认的配置文件加载：
 
-需要改动 `ws_uri`、 `ws_token`、 `webui_uri` 和 `webui_token` 的情况是 [使用远端 NapCat 接口](../5.%20杂项/2.%20使用远端%20napcat%20接口.md).
-
-## 通过 `BotClient.run` 运行时指定(推荐)
-
-引导程序中, 在 `bot.run()` 时可以添加命名参数来指定大部分配置项, 例如:
+### 基本配置修改
 
 ```python
-bot.run(
-    bt_uin="123456", # 注意不是 bot_uin, 这里应该和 config 的成员名一致
-    ws_uri="ws://127.0.0.1:3001",
-    ws_token="",
-    webui_uri="http://127.0.0.1:6099",
-    webui_token="napcat",
-    check_napcat_update = False, # 不检查 NapCat 更新
-    check_ncatbot_update = True, # 检查 NcatBot 更新
+from ncatbot.utils import ncatbot_config
+
+# 设置机器人 QQ 号
+ncatbot_config.set_bot_uin("1234567890")
+
+# 设置管理员 QQ 号
+ncatbot_config.set_root("9876543210")
+```
+
+### NapCat 配置修改
+
+```python
+# 设置 WebSocket 连接地址
+ncatbot_config.set_ws_uri("ws://127.0.0.1:3001")
+
+# 设置 WebSocket 令牌
+ncatbot_config.set_ws_token("new_secure_token")
+
+# 设置 WebUI 地址
+ncatbot_config.set_webui_uri("http://127.0.0.1:6099")
+
+# 设置 WebUI 令牌
+ncatbot_config.set_webui_token("new_webui_token")
+
+# 设置监听 IP
+ncatbot_config.set_ws_listen_ip("0.0.0.0")
+```
+
+### 从文件更新配置
+
+```python
+from ncatbot.config import Config
+
+# 从文件更新现有配置
+ncatbot_config.update_from_file("/path/to/new/config.yaml")
+```
+
+### 通用配置更新
+
+对于 NapCat 配置项和 Plugin 配置项，只需要写最后一级名字即可，例如 `ws_token`、`plugins_dir`。
+
+```python
+# 使用 update_config 方法批量更新
+ncatbot_config.update_config(
+    bt_uin="1234567890",
+    debug=True,
+    root="9876543210"
+)
+
+# 使用 update_value 方法更新单个配置
+# ncatbot_config.debug
+ncatbot_config.update_value("debug", True)
+# ncatbot_config.napcat.ws_token
+ncatbot_config.update_value("ws_token", "new_secure_token") 
+# ncatbot_config.plugin.plugins_dir
+ncatbot_config.update_value("plugins_dir", "/path/to/plugins") 
+```
+
+## 在运行时指定配置项
+
+执行 `BotClient.run_xxxend()` 时可以传入配置项参数，优先级最高。
+
+```python
+from ncatbot.core import BotClient
+bot = BotClient()
+bot.run_frontend(
+  bt_uin="1234567890", # ncatbot_config.bt_uin
+  root="9876543210", # ncatbot_config.root
+  ws_uri="ws://127.0.0.1:3001", # ncatbot_config.napcat.ws_uri
+  plugins_dir="/path/to/plugins" # ncatbot_config.plugin.plugins_dir
 )
 ```
 
-## 在代码里指定配置项(推荐)
+## 注意事项
 
-部分常用配置项可以在代码里直接指定.
+### 文件编码
 
-::: warning
-由于历史原因, bot_uin 的设置函数名叫 `set_bot_uin` 但变量名叫 `bt_uin`.
-:::
+配置文件必须使用 UTF-8 编码。
+
+### 自动检查项目
+
+1. **QQ 号格式验证**：QQ 号支持字符串和整数格式，处理时会自动转为字符串；使用默认 QQ 号时会要求手动输入。
+2. **URI 格式标准化**：使用 http/ws 协议，不支持 https/wss，会自动补充或替换协议前缀。
+3. **端口和主机提取**：从 URI 中自动提取主机名和端口。
+4. **目录存在性检查**：自动创建不存在的插件目录。
+
+### 安全检查
+
+- **强密码检查**：当 `ws_listen_ip` 设置为 `0.0.0.0` 时，要求 `ws_token` 为强密码
+- **WebUI 安全**：启用 WebUI 时要求 `webui_token` 为强密码
+- **远程连接警告**：连接非本地 NapCat 服务时给出提示
+
+强密码要求：
+- 至少 12 位字符
+- 包含数字、字母和特殊符号
+- 特殊符号包括：`!@#$%^&*()_+-=[]{}|;:,.<>?`
+
+## 常见问题
+
+### Q: 为什么我的配置项没有生效？
+
+A: 参阅[ NcatBot 生命周期](3.%20NcatBot%20生命周期.md)，配置项指定需要在调用 `BotClient.run_xxxend()` 之前完成。
 
 ```python
-from ncatbot.utils import config
-
-config.set_bot_uin("123456")  # 设置 bot qq 号 (必填)
-config.set_root("123456")  # 设置 bot 超级管理员账号 (建议填写)
-config.set_ws_uri("ws://localhost:3001")  # 设置 napcat websocket server 地址
-config.set_ws_token("")  # 设置 token (websocket 的 token)
-config.set_webui_uri("http://localhost:6099")  # 设置 napcat webui 地址
-config.set_webui_token("napcat")  # 设置 token (webui 的 token)
+ncatbot_config.update_from_file("config.yaml")
 ```
-
-## 通过文件指定配置项
-
-文件指定的配置项优先级较低，可以被其它方式覆盖。
-
-NcatBot 会读取工作目录下 `config.yaml` 中的配置信息，并作为配置项加载。以下是完整配置项：
-
-```yaml
-# NcatBot 配置文件
-
-# 基本配置
-root: "123456"  # root 账号
-bt_uin: "123456"  # bot 账号
-ws_uri: "ws://localhost:3001"  # ws 地址
-webui_uri: "http://localhost:6099"  # webui 地址
-webui_token: "napcat"  # webui 令牌
-ws_token: ""  # ws_uri 令牌
-ws_listen_ip: "localhost"  # ws 监听 ip, 默认只监听本机
-remote_mode: false  # 是否远程模式, 即 NapCat 服务不在本机运行
-
-# 更新检查
-check_napcat_update: false  # 是否检查 napcat 更新
-check_ncatbot_update: true  # 是否检查 ncatbot 更新
-
-# 开发者调试
-debug: false  # 是否开启调试模式
-skip_ncatbot_install_check: false  # 是否跳过 napcat 安装检查
-skip_plugin_load: false  # 是否跳过插件加载
-
-# 插件加载控制
-# 白名单和黑名单互斥，只能设置其中一个
-# 如果都不设置，则加载所有插件
-# plugin_whitelist:  # 插件白名单，为空表示不启用白名单
-#   - "plugin1"
-#   - "plugin2"
-# plugin_blacklist:  # 插件黑名单，为空表示不启用黑名单
-#   - "plugin3"
-#   - "plugin4"
-
-# NapCat 行为
-stop_napcat: false  # NcatBot 下线时是否停止 NapCat
-enable_webui_interaction: true  # 是否允许 NcatBot 与 NapCat webui 交互
-report_self_message: false  # 是否报告 Bot 自己的消息
-```
-
-## 配置项缺省
-
-如果配置项有缺省(在代码中指定配置项时只指定了一部分), 则缺省的部分会使用==默认配置项==, 默认配置项的值见[配置项列表](#配置项列表).
-
-
-## 指定配置项的时机
-
-由于我们采用==全局变量==的方式来保存配置项, 所以无论使用哪种方式, 都只需要在代码里指定一次即可.
-
-另外, 由于==创建== bot 实例时将会使用配置项, 因此==配置项指定应该放在创建 bot 实例之前.==
 
 
