--- a/docs/notes/guide/3. 组件介绍/6. BotAPI.md
+++ b/docs/notes/guide/3. 组件介绍/6. BotAPI.md
@@ -23,6 +23,7 @@ BotAPI 通过多重继承聚合五大接口域：
 - 底层返回统一包装为 `APIReturnStatus`/`MessageAPIReturnStatus`，非 0 retcode 会抛出 `NapCatAPIError`；
 - 消息体通常使用 `MessageArray`/`MessageSegment`/`Forward` 等结构描述，API 内部负责序列化为 NapCat 需要的 JSON。
 - 提供诸如 `post_group_msg/post_private_msg` 等组合接口，减少上层手动拼装消息片段的成本。
+- 全局只持有一个 `BotAPI` 实例，位于 `status.global_api`，但其他组件会创建对它的引用。
 
 :::tip
 BotAPI 接口很多，这里不逐一罗列。[详细列表]()。 
