--- a/docs/notes/guide/4. 数据结构介绍/2. BaseMessageEvent.md
+++ b/docs/notes/guide/4. 数据结构介绍/2. BaseMessageEvent.md
@@ -59,7 +59,7 @@ classDiagram
 - `sender`: `GroupSender`，发送者信息，参见下文。
 
 便捷方法：
-- `await reply(text=None, image=None, at=True, space=True, rtf=None)`：在群内回复，默认 at 发送者并引用原消息；
+- `await reply(text=None, image=None, at=True, space=True, rtf=None) -> str`：在群内回复，默认 at 发送者并引用原消息，返回消息 ID；
 - `await delete()`：撤回该消息；
 - `await kick()`：踢出发送者；
 - `await ban(ban_duration=30)`：禁言发送者（秒）。
@@ -84,7 +84,7 @@ async def on_group(e: GroupMessageEvent):
 - `sender`: `PrivateSender`，发送者信息，参见下文。
 
 便捷方法：
-- `await reply(text=None, image=None, rtf=None)`：私聊回复，会自动引用原消息。
+- `await reply(text=None, image=None, rtf=None) -> str`：私聊回复，会自动引用原消息，返回消息 ID；
 
 ---
 
