--- a/docs/notes/guide/4. 数据结构介绍/4. MessageSegment.md
+++ b/docs/notes/guide/4. 数据结构介绍/4. MessageSegment.md
@@ -10,6 +10,10 @@ permalink: /guide/message_segment/
 - 统一结构：`{"type": <msg_seg_type>, "data": { ...字段... }}`
 - 可上传对象（图片/文件/视频等）的路径会被规范化（http(s)、base64、dataURI、本地路径等）。
 
+:::warning
+自行构造的 `MessageSegment` 和从事件中获取的 `MessageSegment` 可能存在差异，尤其是媒体类（图片/文件/视频等）的字段。自行构造的用于发送的消息段无需提供某些参数，而接收到的消息段可能存在那些参数。
+:::
+
 ---
 
 ## 常用属性访问
@@ -102,7 +106,7 @@ seg.to_dict() == {"type": "face", "data": {"id": "14", "faceText": "[表情]"}}
 ```
 
 - `Face.id` 参考[QQ表情消息](https://github.com/kyubotics/coolq-http-api/wiki/%E8%A1%A8%E6%83%85-CQ-%E7%A0%81-ID-%E8%A1%A8)。
-- `Face.faceText` 可从上游附带，用于摘要展示。
+- `Face.faceText` 可从上游附带，用于摘要展示，构造时无需传入。
 
 ---
 
@@ -127,8 +131,8 @@ seg.to_dict() == {"type": "image", "data": {"file": "<标准化路径>"}}
 ```
 
 - `Image.file`: 图片路径
-- `Image.file_name`: 图片文件名（尽力提供）
-- `Image.url`: 图片链接
+- `Image.file_name`: 图片文件名（上游尽力提供，**构造时无需传入**）
+- `Image.url`: 图片链接（**构造时无需传入**）
 
 ### Record（语音）
 
@@ -139,8 +143,8 @@ seg.to_dict() == {"type": "record", "data": {"file": "<标准化路径>"}}
 ```
 
 - `Record.file`: 语音路径
-- `Record.file_name`: 语音文件名（尽力提供）
-- `Record.url`: 语音链接
+- `Record.file_name`: 语音文件名（尽力提供，**构造时无需传入**）
+- `Record.url`: 语音链接（**构造时无需传入**）
 
 ### Video（视频）
 
@@ -151,8 +155,8 @@ seg.to_dict() == {"type": "video", "data": {"file": "<标准化路径>"}}
 ```
 
 - `Video.file`: 视频路径
-- `Video.file_name`: 视频文件名（尽力提供）
-- `Video.url`: 视频链接
+- `Video.file_name`: 视频文件名（尽力提供，**构造时无需传入**）
+- `Video.url`: 视频链接（**构造时无需传入**）
 
 ### File（通用文件）
 
@@ -164,8 +168,8 @@ seg.to_dict() == {"type": "file", "data": {"file": "<标准化路径>", "name": 
 ```
 
 - `File.file`: 文件路径
-- `File.file_name`: 文件文件名（尽力提供）
-- `File.url`: 文件链接
+- `File.file_name`: 文件文件名（尽力提供，**构造时无需传入**）
+- `File.url`: 文件链接（**构造时无需传入**）
 
 ---
 
@@ -239,12 +243,24 @@ seg.to_dict() == {
 ```
 
 ### Contact（名片）
+
 ```python
 # 结构示例（目前实现为简单数据承载）
-{"type": "contact", "data": {"type": "qq" | "group", "id": "123456"}}
+from ncatbot.core.event.message_segment import Contact
+
+seg = Contact("qq", "123456")
+seg.to_dict() == {"type": "contact", "data": {"type": "qq", "id": "123456"}}
 ```
 
+- `Contact.type`: 名片类型（qq/group）
+- `Contact.id`: 名片 ID
+
 ### Location（位置）
+
+:::warning
+未测试过
+:::
+
 ```python
 from ncatbot.core.event.message_segment import Location
 seg = Location(lat=39.9, lon=116.4, title="天安门", content="北京")
@@ -271,6 +287,10 @@ seg2.to_dict() == {
 
 ### XML、Json、Markdown
 
+:::warning
+只支持接收
+:::
+
 ```python
 from ncatbot.core.event.message_segment import XML, Json, Markdown
 XML("<xml/>").to_dict() == {"type": "xml", "data": {"data": "<xml/>"}}
@@ -296,6 +316,7 @@ Anonymous().to_dict() == {"type": "anonymous", "data": {}}
 ---
 
 ## 小贴士
+
 - 仅当 `MessageArray` 全部由 `Forward`/`Node` 组成时才算合并转发；与其他段混用会报错。
 - 传入本地路径时，若 NapCat 与机器人在同一机器上，路径会被转换为绝对路径；否则会转为 `base64://...` 或 `file:` URL。
 - `Text` 与 `PlainText` 均为 `type=text`，`filter(Text)` 会同时匹配两者。
