--- a/docs/notes/guide/5. API 参考/7. 实战手册/1. 常见场景.md
+++ b/docs/notes/guide/5. API 参考/7. 实战手册/1. 常见场景.md
@@ -2,40 +2,54 @@
 
 这里给出基于“事件快速回复”方法的常见场景代码片段，便于即抄即用。
 
+基本格式：
+```python
+from ncatbot.core.events import BaseMessageEvent, RequestEvent
+
+async def your_message_handler(event: BaseMessageEvent):
+    # 你的处理代码
+    pass
+
+async def your_request_handler(event: RequestEvent):
+    # 你的处理代码
+    pass
+
+```
+
 ---
 
-### 群：回复并 @ 对方
+### 群消息：回复并 @ 对方
 ```python
 async def on_group(event):
     await event.reply(text="收到", at=True)
 ```
 
-### 群：仅引用回复（不@）
+### 群消息：仅引用回复（不@）
 ```python
 await event.reply(text="只引用", at=False)
 ```
 
-### 群：撤回当前消息
+### 群消息：撤回当前消息
 ```python
 await event.delete()
 ```
 
-### 群：禁言消息发送者 60 秒
+### 群消息：禁言消息发送者 60 秒
 ```python
 await event.ban(ban_duration=60)
 ```
 
-### 群：踢出消息发送者
+### 群消息：踢出消息发送者
 ```python
 await event.kick()
 ```
 
-### 群：带图片的回复
+### 群消息：带图片的回复
 ```python
 await event.reply(image="./pic.png")
 ```
 
-### 私聊：快速文本/图片回复
+### 私聊消息：快速文本/图片回复
 ```python
 await event.reply(text="你好")
 await event.reply(image="./pic.png")
@@ -43,17 +57,20 @@ await event.reply(image="./pic.png")
 
 ### 请求：同意加好友并设置备注
 ```python
-await event.approve(True, remark="来自活动 A")
+if event.request_type == "friend":
+    await event.approve(True, remark="新朋友 XXX")
 ```
 
 ### 请求：拒绝入群并给理由
 ```python
-await event.approve(False, reason="请先完成实名认证")
+if event.request_type == "group":
+    await event.approve(False, reason="请先完成实名认证")
 ```
 
 ---
 
 ### 同步环境用法（示例）
+
 ```python
 # 群
 event.reply_sync(text="OK", at=True)
@@ -70,8 +87,3 @@ event.approve_sync(True, remark="新同学")
 
 ---
 
-### 相关文档
-- 事件快速上手：`docs/api/QuickStart_Events.md`
-- 事件 API 参考：`docs/api/reference/Events.md`
-- 消息结构与构造：`docs/api/MessageSegment.md`、`docs/api/MessageArray.md`
-- 合并转发：`docs/api/ForwardMessage.md`
