整理文件结构

--- a/docs/notes/guide/1. 开始/1. 认识 NcatBot.md
+++ b/docs/notes/guide/1. 开始/1. 认识 NcatBot.md
@@ -61,7 +61,7 @@ Copyright (c) 2025 NcatBot开发项目组
 四、管辖法律
 本协议适用中华人民共和国法律，任何争议应提交厦门仲裁委员会仲裁解决。
 
-本协议最终解释权归NcatBot开发项目组所有。
+本协议最终解释权归 NcatBot 开发项目组所有。
 ```
 
 本项目仅用于学习交流, 使用本项目造成的任何后果由使用者承担, 与项目开发组无关.
@@ -72,12 +72,12 @@ Copyright (c) 2025 NcatBot开发项目组
 
 ## 我们的合作伙伴
 
-感谢 [IppClub](https://github.com/IppClub/) 对本项目的大力支持.
+感谢 [IppClub](https://github.com/IppClub/) 对本项目的大力支持。
 
 > 欢迎来到 I++ 俱乐部!！我们是一个充满激情的开发者、创作者和创新者社区，致力于通过协作与开源开发的力量，推动有意义的项目与技术的诞生。最初，I++ 俱乐部起源于大学里的学生社团，随着核心成员的毕业与加入工作，俱乐部活动逐渐拓展到了社会范围，现也面向同样来自打工阶层的程序员们。我们鼓励技术爱好者共同探索IT领域的无限可能，推动技术交流与创新，创造更加开放、包容的技术文化。
 
-感谢 [NapCat](https://github.com/NapNeko) 为本项目提供底层支持.
+感谢 [NapCat](https://github.com/NapNeko) 为本项目提供底层支持。
 
-感谢 [扶摇云](https://v10.fyyun.net/home.htm) 为本项目提供上云服务.
+感谢 [林枫云](https://www.dkdun.cn/) 为本项目提供上云服务。
 
-二次开发项目 [FcatBot](https://github.com/Fish-LP/FcatBot).
+二次开发项目 [FcatBot](https://github.com/Fish-LP/FcatBot)。
