--- a/docs/notes/guide/1. 开始/3. 安装教程/1 通用安装指南.md
+++ b/docs/notes/guide/1. 开始/3. 安装教程/1 通用安装指南.md
@@ -4,6 +4,14 @@ createTime: 2025/04/22 15:21:39
 permalink: /guide/minimali/
 ---
 
+本通用指南提供最简单的叙述，如果需要详细指导，可以查看下面的详细指南。
+
+## 详细安装指南
+
+- [Linux](./2.%20Linux%20安装.md)
+- [Windows](./3.%20Windows%20安装.md)
+- [MacOS](./4.%20MacOS%20安装.md)
+
 ## 环境检查
 
 - Python：版本 >= 3.12 （后续补丁会支持低版本）
@@ -12,7 +20,7 @@ permalink: /guide/minimali/
     - 更新电脑 QQ 到最新版本
   - Linux
     - 安装好 curl sudo。
-- 网络环境：使用本机 6099 和 3001 端口。如果确实存在占用，参考[配置项](../2.%20基本开发/4.%20配置项.md)解决。
+- 网络环境：使用本机 6099 和 3001 端口。如果确实存在占用，参考[配置项](../../2.%20基本开发/4.%20配置项.md)解决。
 
 ## 安装 NcatBot
 
