--- a/docs/notes/guide/2. 基本开发/1. 插件最小示例.md
+++ b/docs/notes/guide/2. 基本开发/1. 插件最小示例.md
@@ -35,7 +35,7 @@ class HelloPlugin(NcatBotPlugin):
     async def hello_cmd(self, event: BaseMessageEvent):
         await event.reply("你好！我是插件 HelloPlugin。")
 
-    @filter_registry.private_only
+    @filter_registry.private_filter
     async def on_private_msg(self, event: PrivateMessageEvent):
         await event.reply("你发送了一条私聊消息！")
 ```
