--- a/docs/notes/guide/3. 组件介绍/2. BotClient.md
+++ b/docs/notes/guide/3. 组件介绍/2. BotClient.md
@@ -4,7 +4,10 @@ createTime: 2025/09/26 10:30:00
 permalink: /guide/botclient/
 ---
 
+
+
 ## BotClient：事件回调注册与运行方式
+
 
 BotClient 是 NcatBot 的对外门面，负责：
 - 持有 Adapter 与 BotAPI，并把 Adapter 的底层能力包装成易用的 API（`self.api = BotAPI(self.adapter.send)`）。
@@ -13,16 +16,42 @@ BotClient 是 NcatBot 的对外门面，负责：
 
 本文重点介绍回调的注册方法与使用建议。
 
+### 回调函数机制
+
+NcatBot 采用==回调函数==机制来上报事件. 当对应事件发生时， 由 BotClient 调用事件绑定的回调函数， 并将事件相关信息作为参数传递。
+
+NcatBot 的**回调函数只有一个参数**, 用于传递所发生事件的信息。
+
+[上报格式](../4.%20数据结构介绍/2.%20BaseMessageEvent.md)
+
+
 ### 官方事件分组
 
-内部预置的官方事件名（用于 Adapter 回调对接）：
-- 私聊消息：`OFFICIAL_PRIVATE_MESSAGE_EVENT`
-- 群聊消息：`OFFICIAL_GROUP_MESSAGE_EVENT`
-- 通知事件：`OFFICIAL_NOTICE_EVENT`
-- 请求事件：`OFFICIAL_REQUEST_EVENT`
-- 启动事件：`OFFICIAL_STARTUP_EVENT`
-- 关闭事件：`OFFICIAL_SHUTDOWN_EVENT`
-- 心跳事件：`OFFICIAL_HEARTBEAT_EVENT`
+NcatBot 会上报以下事件：
+
+```python
+OFFICIAL_GROUP_MESSAGE_EVENT = "ncatbot.group_message_event"
+OFFICIAL_PRIVATE_MESSAGE_EVENT = "ncatbot.private_message_event"
+OFFICIAL_REQUEST_EVENT = "ncatbot.request_event"
+OFFICIAL_NOTICE_EVENT = "ncatbot.notice_event"
+OFFICIAL_STARTUP_EVENT = "ncatbot.startup_event"
+OFFICIAL_SHUTDOWN_EVENT = "ncatbot.shutdown_event"
+OFFICIAL_HEARTBEAT_EVENT = "ncatbot.heartbeat_event"
+```
+
+分为四大类：
+
+- 元事件：
+    - Bot 启动事件 (STARTUP_EVENT)
+    - Bot 心跳事件 (HEARTBEAT_EVENT)
+    - Bot 关闭事件 (SHUTDOWN_EVENT)
+- 消息事件：
+    - 群消息事件 (GROUP_MESSAGE_EVENT)
+    - 私聊消息事件 (PRIVATE_MESSAGE_EVENT)
+- 请求事件 (REQUEST_EVENT)
+- 通知事件 (NOTICE_EVENT)
+
+上报事件时传递的[数据结构](../4.%20数据结构介绍/2.%20BaseMessageEvent.md)。
 
 BotClient 初始化时会为每个事件创建一个处理器列表，并把 Adapter 的 `event_callback[event_name]` 指向 `BotClient` 内部的**异步分发函数**。
 
