--- a/docs/notes/guide/7. 插件系统/2. 插件的加载和卸载.md
+++ b/docs/notes/guide/7. 插件系统/2. 插件的加载和卸载.md
@@ -6,7 +6,7 @@ permalink: /guide/loadplg/
 
 ## 插件加载
 
-`BasePlugin` 提供 `on_load` 方法, 重写 `on_load` 方法可以在在插件加载时执行一些任务.
+`NcatBot` 提供 `on_load` 方法, 重写 `on_load` 方法可以在在插件加载时执行一些任务.
 
 一般来说, 以下工作需要**你**在插件加载时完成:
 
