--- a/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.2 注册功能.md
+++ b/docs/notes/guide/7. 插件系统/3. 插件的交互系统/3.2 注册功能.md
@@ -4,6 +4,10 @@ createTime: 2025-03-27 10:52:00
 permalink: /guide/regifunc/
 ---
 
+:::warning
+这是 3.x.y 版本的常用方法；从 4.0.0 版本起，更推荐使用[统一命令注册器](../../8.%20高级教程/1.%20统一命令注册器/1.%20概览.md)来注册命令和功能。
+:::
+
 ## 使用功能
 
 功能是对**事件发布和处理**的进一步封装, 使用功能可以方便快捷的接入 NcatBot 的[权限管理机制](3.3%20权限系统.md).
