--- a/docs/notes/guide/7. 插件系统/5. 发布你的插件.md
+++ b/docs/notes/guide/7. 插件系统/5. 发布你的插件.md
@@ -4,6 +4,8 @@ createTime: 2025/03/06 11:21:00
 permalink: /guide/qr8yp7sn/
 ---
 
+# 暂时废弃
+
 [插件仓库地址](https://github.com/ncatbot/NcatBot-Plugins)
 
 ## 发布你的插件
@@ -19,3 +21,8 @@ permalink: /guide/qr8yp7sn/
 [安装和使用插件](../1.%20快速开始/3.%20安装和使用插件.md)
 [Windows 一键安装](../1.%20快速开始/1.4%20Windows%20一键安装.md)
 
+### 插件元数据
+
+- `name`：插件名，插件唯一标识符，**必须全局唯一**。
+- `version`：插件版本，一般采用 `x.y.z` 方式。
+- `author`：可选，插件作者名。
