--- a/docs/notes/guide/8. 高级教程/3. 其他/5. CLI.md
+++ b/docs/notes/guide/8. 高级教程/3. 其他/5. CLI.md
@@ -4,6 +4,8 @@ createTime: 2025/03/05 20:00:05
 permalink: /guide/ncatbotcli/
 ---
 
+# 暂时废弃
+
 ## 简介
 
 NcatBot CLI 是一个命令行工具，用于管理和控制 NcatBot 的运行。它提供了丰富的命令来管理插件、配置机器人以及执行各种系统操作。
