--- a/docs/notes/guide/8. 高级教程/1. 统一命令注册器/1. 概览.md
+++ b/docs/notes/guide/8. 高级教程/1. 统一命令注册器/1. 概览.md
@@ -26,7 +26,7 @@
 ```python
 from ncatbot.plugin_system import NcatBotPlugin
 from ncatbot.plugin_system import command_registry
-from ncatbot.plugin_system import group_only, admin_only
+from ncatbot.plugin_system import group_filter, admin_filter
 from ncatbot.plugin_system import option, param
 from ncatbot.core.event import BaseMessageEvent
 from ncatbot.utils import get_log
@@ -45,13 +45,13 @@ class MyPlugin(NcatBotPlugin):
         await event.reply("Hello, World!")
     
     # 带权限的命令
-    @group_only
+    @group_filter
     @command_registry.command("kick")
     async def kick_cmd(self, event: BaseMessageEvent, user_id: str):
         await event.reply(f"踢出用户: {user_id}")
     
     # 复杂参数命令
-    @admin_only
+    @admin_filter
     @command_registry.command("deploy")
     @option(short_name="v", long_name="verbose", help="详细输出")
     @param(name="env", default="dev", help="部署环境")
