--- a/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
+++ b/docs/notes/guide/4. 数据结构介绍/2. BaseEventData.md
@@ -6,7 +6,7 @@ permalink: /guide/events/
 
 ## 概览
 
-NcatBot 将 OneBot/NapCat 的原始事件结构封装为更易用的事件对象。本文介绍全部事件对象及其附属数据结构：
+NcatBot 将 OneBot/NapCat 的原始事件（称为官方事件）结构封装为更易用的事件对象。本文介绍全部事件对象及其附属数据结构：
 - GroupMessageEvent（群消息）
 - PrivateMessageEvent（私聊消息）
 - RequestEvent（请求：加好友/加群）
